--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -35,6 +35,12 @@
             <span class="text-[#1E9EFE]">BOOK</span>
             <span class="ml-[2px] hidden lg:block">U_LUV</span>
         </a>
+        <div>
+            <form action="#" th:action="@{/api/search}" th:method="get" onsubmit="return validateSearchForm();">
+                <input type="text" name="query" placeholder="Search for a book">
+                <button type="submit">Search</button>
+            </form>
+        </div>
 
         <div class="flex gap-4 items-center">
             <a href="/member/login" class="inline-flex" sec:authorize="isAnonymous()">
@@ -57,14 +63,18 @@
             </a>
 
             <a href="/member/profile" class="inline-flex items-center" sec:authorize="isAuthenticated()">
-<!--                <i class="fa-solid fa-user"></i>-->
-                <img class="fa-solid fa-user w-12 h-12" style="border : solid 1px; border-radius : 50%;" alt="" th:if="${#authentication.principal.imgFilePath}" th:src="${#authentication.principal.imgFilePath}"/>
-                <img class="fa-solid fa-user w-12 h-12" style="border : solid 1px; border-radius : 50%;" alt="" src="https://mblogthumb-phinf.pstatic.net/MjAyMDExMDFfMyAg/MDAxNjA0MjI5NDA4NDMy.5zGHwAo_UtaQFX8Hd7zrDi1WiV5KrDsPHcRzu3e6b8Eg.IlkR3QN__c3o7Qe9z5_xYyCyr2vcx7L_W1arNFgwAJwg.JPEG.gambasg/%EC%9C%A0%ED%8A%9C%EB%B8%8C_%EA%B8%B0%EB%B3%B8%ED%94%84%EB%A1%9C%ED%95%84_%ED%8C%8C%EC%8A%A4%ED%85%94.jpg?type=w800"
+                <!--                <i class="fa-solid fa-user"></i>-->
+                <img class="fa-solid fa-user w-12 h-12" style="border : solid 1px; border-radius : 50%;" alt=""
+                     th:if="${#authentication.principal.imgFilePath}"
+                     th:src="${#authentication.principal.imgFilePath}"/>
+                <img class="fa-solid fa-user w-12 h-12" style="border : solid 1px; border-radius : 50%;" alt=""
+                     src="https://mblogthumb-phinf.pstatic.net/MjAyMDExMDFfMyAg/MDAxNjA0MjI5NDA4NDMy.5zGHwAo_UtaQFX8Hd7zrDi1WiV5KrDsPHcRzu3e6b8Eg.IlkR3QN__c3o7Qe9z5_xYyCyr2vcx7L_W1arNFgwAJwg.JPEG.gambasg/%EC%9C%A0%ED%8A%9C%EB%B8%8C_%EA%B8%B0%EB%B3%B8%ED%94%84%EB%A1%9C%ED%95%84_%ED%8C%8C%EC%8A%A4%ED%85%94.jpg?type=w800"
                      th:unless="${#authentication.principal.imgFilePath}"/>
                 <span class="ml-[2px]">
                    <svg width="20" height="20"></svg>
                 </span>
-                <span class="ml-[2px] hidden lg:block items-center" th:if="${#authentication.principal.nickName}" th:text="${#authentication.principal.nickName + ' 님'}">
+                <span class="ml-[2px] hidden lg:block items-center" th:if="${#authentication.principal.nickName}"
+                      th:text="${#authentication.principal.nickName + ' 님'}">
                 </span>
             </a>
 
@@ -118,4 +128,15 @@
 <script src="/resource/common/common.js"></script>
 
 </body>
+<script th:inline="javascript">
+    /* 검색창이 제출될 때 검색어가 비어있는지 확인 */
+    function validateSearchForm() {
+        var queryInput = document.querySelector('input[name="query"]');
+        if (queryInput.value.trim() === "") {
+            alert("검색어를 입력해주세요.");
+            return false; // 검색어가 비어있으면 검색 요청을 보내지 않도록 반환
+        }
+        return true;
+    }
+</script>
 </html>
