메인페이지 검색페이지 수정 관리자페이지 작성 공지사항 작성

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -31,66 +31,88 @@
 
 <header class="fixed z-40 top-0 left-0 w-full bg-white border-b-[1px] border-b-[color:#efefef] h-[35px] md:h-[50px]">
     <div class="container mx-auto h-full flex items-center px-2">
-        <a href="/" class="logo flex font-bold mr-auto">
-            <span class="text-[#1E9EFE]">BOOK</span>
-            <span class="ml-[2px] hidden lg:block">U_LUV</span>
-        </a>
-        <div>
-            <form action="#" th:action="@{/api/search}" th:method="get" onsubmit="return validateSearchForm();">
-                <input type="text" name="query" placeholder="Search for a book">
-                <button type="submit">Search</button>
+        <div class="flex mr-auto">
+            <a href="/" class="logo flex font-bold">
+                <span class="text-[#1E9EFE]">BOOK</span>
+                <span class="ml-[2px] hidden lg:block">U_LUV</span>
+            </a>
+            <div class="flex gap-4 ml-[50px] font-bold">
+                <a href="#" class="inline-flex hover:text-red-500">
+                    <span class="ml-[2px] hidden lg:block">
+                        국내도서
+                    </span>
+                </a>
+
+                <a href="#" class="inline-flex hover:text-red-500">
+                    <span class="ml-[2px] hidden lg:block">
+                        외국도서
+                    </span>
+                </a>
+
+                <a href="#" class="inline-flex hover:text-red-500">
+                    <span class="ml-[2px] hidden lg:block">
+                        중고도서
+                    </span>
+                </a>
+            </div>
+
+        </div>
+
+        <div class="search-box flex items-center space-x-2 mr-[20px]">
+            <form class="flex items-center" action="#" th:action="@{/api/search}" th:method="get"
+                  onsubmit="return validateSearchForm();">
+                <div class="relative flex items-center">
+                    <input type="text" name="query" class="border p-2 rounded-l pr-10" placeholder="Search for a book">
+                    <button type="submit" class="absolute right-3 top-0 h-full bg-transparent">
+                        <i class="fas fa-search text-black text-base"></i>
+                    </button>
+                </div>
             </form>
         </div>
 
-        <div class="flex gap-4 items-center">
+        <div class="flex gap-4">
             <a href="/member/login" class="inline-flex" sec:authorize="isAnonymous()">
-                <span class="ml-[2px] hidden lg:block items-center">
+                <span class="ml-[2px] hidden lg:block">
                     로그인
                 </span>
             </a>
 
             <a href="/member/join" class="inline-flex" sec:authorize="isAnonymous()">
-                <span class="ml-[2px] hidden lg:block items-center">
+                <span class="ml-[2px] hidden lg:block">
                     회원가입
                 </span>
             </a>
 
-            <a href="/member/logout" class="inline-flex items-center" sec:authorize="isAuthenticated()">
-                <i class="fa-solid fa-arrow-right-from-bracket items-center"></i>
-                <span class="ml-[2px] hidden lg:inline-flex items-center">
+            <a href="/member/logout" class="inline-flex" sec:authorize="isAuthenticated()">
+                <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                <span class="ml-[2px] hidden lg:block">
                     로그아웃
                 </span>
             </a>
 
-            <a href="/member/profile" class="inline-flex items-center" sec:authorize="isAuthenticated()">
-                <!--                <i class="fa-solid fa-user"></i>-->
-                <img class="fa-solid fa-user w-12 h-12" style="border : solid 1px; border-radius : 50%;" alt=""
-                     th:if="${#authentication.principal.imgFilePath}"
-                     th:src="${#authentication.principal.imgFilePath}"/>
-                <img class="fa-solid fa-user w-12 h-12" style="border : solid 1px; border-radius : 50%;" alt=""
-                     src="https://mblogthumb-phinf.pstatic.net/MjAyMDExMDFfMyAg/MDAxNjA0MjI5NDA4NDMy.5zGHwAo_UtaQFX8Hd7zrDi1WiV5KrDsPHcRzu3e6b8Eg.IlkR3QN__c3o7Qe9z5_xYyCyr2vcx7L_W1arNFgwAJwg.JPEG.gambasg/%EC%9C%A0%ED%8A%9C%EB%B8%8C_%EA%B8%B0%EB%B3%B8%ED%94%84%EB%A1%9C%ED%95%84_%ED%8C%8C%EC%8A%A4%ED%85%94.jpg?type=w800"
-                     th:unless="${#authentication.principal.imgFilePath}"/>
+            <a href="/member/profile" class="inline-flex" sec:authorize="isAuthenticated()">
+                <i class="fa-solid fa-user"></i>
                 <span class="ml-[2px]">
                    <svg width="20" height="20"></svg>
                 </span>
-                <span class="ml-[2px] hidden lg:block items-center" th:if="${#authentication.principal.nickName}"
-                      th:text="${#authentication.principal.nickName + ' 님'}">
+                <span class="ml-[2px] hidden lg:block">
+                   00회원
                 </span>
             </a>
 
-            <a href="#" class="inline-flex items-center">
-                <span class="ml-[2px] hidden lg:block items-center">
+            <a href="#" class="inline-flex">
+                <span class="ml-[2px] hidden lg:block">
                     메뉴 1
                 </span>
             </a>
 
-            <a href="#" class="inline-flex items-center">
+            <a href="#" class="inline-flex">
                 <span class="ml-[2px] hidden lg:block">
                     메뉴 2
                 </span>
             </a>
 
-            <a href="#" class="inline-flex items-center">
+            <a href="#" class="inline-flex">
                 <span class="ml-[2px] hidden lg:block">
                     메뉴 3
                 </span>
@@ -126,8 +148,6 @@
 </footer>
 
 <script src="/resource/common/common.js"></script>
-
-</body>
 <script th:inline="javascript">
     /* 검색창이 제출될 때 검색어가 비어있는지 확인 */
     function validateSearchForm() {
@@ -139,4 +159,5 @@
         return true;
     }
 </script>
+</body>
 </html>
