--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -92,6 +92,8 @@
 
 <div class="flex-grow flex flex-col py-5">
     <main layout:fragment="content" class="flex-grow flex flex-col"></main>
+    <div></div>
+    <div></div>
 </div>
 
 <footer class="border-t-[1px] border-t-[color:#efefef] py-3 text-[color:#777] text-[14px] mt-5">
@@ -119,3 +121,5 @@
 
 </body>
 </html>
+
+
