--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -101,9 +101,9 @@
                 </span>
             </a>
 
-            <a href="#" class="inline-flex items-center">
+            <a href="/admin/list" class="inline-flex items-center">
                 <span class="ml-[2px] hidden lg:block items-center">
-                    메뉴 1
+                    관리자페이지
                 </span>
             </a>
 
