--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -24,14 +24,16 @@
                     <label class="label">
                         <span class="label-text">아이디</span>
                     </label>
-                    <input autofocus class="input input-bordered" maxlength="50" name="username" id="username" placeholder="아이디" type="text">
+                    <input autofocus class="input input-bordered" maxlength="50" name="username" id="username"
+                           placeholder="아이디" type="text">
                 </div>
 
                 <div class="form-control">
                     <label class="label">
                         <span class="label-text">비밀번호</span>
                     </label>
-                    <input class="input input-bordered" maxlength="50" name="password" id="password" placeholder="비밀번호" type="password">
+                    <input class="input input-bordered" maxlength="50" name="password" id="password" placeholder="비밀번호"
+                           type="password">
                 </div>
 
                 <div class="grid grid-cols-2 mt-2 gap-2">
@@ -45,24 +47,28 @@
                 </div>
             </form>
         </div>
-        <div class="w-full flex relative justify-center">
-
-            <div class="w-[10%]" id="login-kakao">
-                <a class="flex justify-center" href="http://localhost:7070/oauth2/authorization/kakao">
-                    <img class="w-1/2 object-cover rounded-lg" th:src="@{/image/login_kakao.png}" alt="">
+        <div class="login-logo flex mt-[20px] justify-between">
+            <div class="w-1/3">
+                <div class="logo" id="login-kakao">
+                    <a href="http://localhost:7070/oauth2/authorization/kakao">
+                        <img class="w-[80px] h-[80px]" th:src="@{/image/login_kakao.png}" alt="">
+                    </a>
+                </div>
+            </div>
+            <div class="w-1/3 mx-[60px]">
+                <div class="logo" id="login-naver">
+                    <a href="http://localhost:7070/oauth2/authorization/naver">
+                        <img class="w-[80px] h-[80px]" th:src="@{/image/login_naver.png}" alt="">
+                    </a>
+                </div>
+            </div>
+            <div class="w-[10%]" id="login_google">
+                <a class="flex justify-center" href="http://localhost:7070/oauth2/authorization/google">
+                    <img class="w-1/2 object-cover rounded-lg" th:src="@{/image/login_google.png}" alt="">
                 </a>
             </div>
-            <div class="w-[10%]" id="login-naver">
-                <a class="flex justify-center" href="http://localhost:7070/oauth2/authorization/naver">
-                    <img class="w-1/2 object-cover rounded-lg" th:src="@{/image/login_naver.png}" alt="">
-                </a>
-            </div>
-            <!--            <div class="w-[10%]" id="login_google">-->
-            <!--                <a class="flex justify-center" href="http://localhost:7070/oauth2/authorization/google">-->
-            <!--                    <img class="w-1/2 object-cover rounded-lg" th:src="@{/image/login_google.png}" alt="">-->
-            <!--                </a>-->
-            <!--            </div>-->
         </div>
+
     </section>
 
 </main>
