--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html layout:decorate="~{layout/layout.html}" xmlns:th="http://www.w3.org/1999/xhtml">
+<html layout:decorate="~{layout/layout.html}" xmlns:th="http://www.w3.org/1999/xhtml"
+      xmlns:layout="http://www.w3.org/1999/xhtml">
 
 <head>
     <title>로그인</title>
