회원정보 수정폼 생성

--- a/src/main/resources/templates/member/modifyPassword.html
+++ b/src/main/resources/templates/member/modifyPassword.html
@@ -12,7 +12,6 @@
         <div class="max-w-md w-full px-2 pt-4">
             <h1 class="font-bold text-lg">
                 <i class="fa-solid fa-lock"></i>
-
                 비밀번호 변경
             </h1>
 
@@ -45,33 +44,30 @@
                     form.submit();
                     MemberModifyPassword__submitDone = true;
                 }
+
             </script>
 
-
-            <form th:action method="POST" class="flex flex-col gap-3"
-                  onsubmit="MemberModifyPassword__submit(this); return false;">
+            <form class="flex flex-col gap-3" method="POST" onsubmit="MemberModifyPassword__submit(this); return false;"
+                  th:action>
                 <div class="form-control">
                     <label class="label">
                         <span class="label-text">기존 비밀번호</span>
                     </label>
-                    <input type="password" name="oldPassword"
-                           placeholder="기존 비밀번호" class="input input-bordered" maxlength="50">
+                    <input class="input input-bordered" maxlength="50"
+                           name="oldPassword" placeholder="기존 비밀번호" type="password">
                 </div>
 
                 <div class="form-control">
                     <label class="label">
                         <span class="label-text">비밀번호</span>
                     </label>
-                    <input type="password" name="password"
-                           placeholder="비밀번호" class="input input-bordered" maxlength="50">
+                    <input class="input input-bordered" maxlength="50"
+                           name="password" placeholder="비밀번호" type="password">
                 </div>
-
                 <input class="btn btn-primary" type="submit" value="비밀번호 변경">
             </form>
         </div>
-
     </section>
-
 </main>
 </body>
 </html>
