--- a/src/main/resources/templates/member/profile.html
+++ b/src/main/resources/templates/member/profile.html
@@ -199,7 +199,7 @@
                     <label class="label">
                         <span class="label-text">내용 수정/추가</span>
                     </label>
-                    <a href="/member/edit" class="btn btn-secondary btn-outline">내용 수정/추가</a>
+                    <a href="/member/updateprofile" class="btn btn-secondary btn-outline">내용 수정/추가</a>
                 </div>
 
                 <!-- 회원탈퇴 -->
