공지사항 CRUD 구현

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -100,9 +100,9 @@
                 </span>
             </a>
 
-            <a href="#" class="inline-flex flex-shrink-0">
+            <a href="/notice/list" class="inline-flex flex-shrink-0">
                 <span class="ml-[2px]">
-                    메뉴 1
+                    공지사항
                 </span>
             </a>
 
