전체 템플릿 title태그에 BOOKU_LUV 네이밍 추가

--- a/src/main/resources/templates/form_errors.html
+++ b/src/main/resources/templates/form_errors.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>BOOKU_LUV error</title>
     <!-- 테일윈드 -->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
