--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>main</title>
+    <title>BOOKU_LUV Main</title>
 </head>
 <body>
 <div>메인페이지입니다</div>
