--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -2,7 +2,7 @@
 <html layout:decorate="~{layout/layout.html}" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
-    <title>로그인</title>
+    <title>BOOKU_LUV 로그인</title>
 </head>
 
 <body>
