--- a/src/main/resources/templates/member/modifyPassword.html
+++ b/src/main/resources/templates/member/modifyPassword.html
@@ -2,7 +2,7 @@
 <html layout:decorate="~{layout/layout.html}">
 
 <head>
-    <title>비밀번호 변경</title>
+    <title>BOOKU_LUV 비밀번호 변경</title>
 </head>
 
 <body>
