--- a/src/main/resources/templates/post/modify.html
+++ b/src/main/resources/templates/post/modify.html
@@ -2,7 +2,7 @@
 <html layout:decorate="~{layout/layout.html}">
 
 <head>
-    <title>글 수정</title>
+    <title>BOOKU_LUV 글 수정</title>
 </head>
 
 <body>
