--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -2,7 +2,7 @@
 <html layout:decorate="~{layout/layout.html}">
 
 <head>
-    <title>도서 목록</title>
+    <title>BOOKU_LUV 도서 목록</title>
 </head>
 
 <body>
