--- a/src/main/resources/templates/product/tagList.html
+++ b/src/main/resources/templates/product/tagList.html
@@ -2,7 +2,7 @@
 <html layout:decorate="~{layout/layout.html}" xmlns="http://www.w3.org/1999/html">
 
 <head>
-    <title>도서 태그</title>
+    <title>BOOKU_LUV 도서 태그</title>
 </head>
 
 <body>
