--- a/src/main/resources/templates/member/beAuthor.html
+++ b/src/main/resources/templates/member/beAuthor.html
@@ -2,7 +2,7 @@
 <html layout:decorate="~{layout/layout.html}">
 
 <head>
-    <title>작가 시작</title>
+    <title>BOOKU_LUV 작가 시작</title>
 </head>
 
 <body>
