--- a/src/main/resources/templates/member/findUsername.html
+++ b/src/main/resources/templates/member/findUsername.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <title>아이디 찾기</title>
+    <title>BOOKU_LUV 아이디 찾기</title>
 </head>
 <body>
 <h1 class="find">Find ID</h1>
