--- a/src/main/resources/templates/member/profile.html
+++ b/src/main/resources/templates/member/profile.html
@@ -2,7 +2,7 @@
 <html layout:decorate="~{layout/layout.html}" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
-    <title>마이페이지</title>
+    <title>BOOKU_LUV 마이페이지</title>
 </head>
 
 <body>
