--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -2,7 +2,7 @@
 <html layout:decorate="~{layout/layout.html}">
 
 <head>
-    <title>내 목록</title>
+    <title>BOOKU_LUV 내 목록</title>
 </head>
 
 <body>
