--- a/src/main/resources/templates/product/create.html
+++ b/src/main/resources/templates/product/create.html
@@ -2,7 +2,7 @@
 <html layout:decorate="~{layout/layout.html}">
 
 <head>
-    <title>상품 등록</title>
+    <title>BOOKU_LUV 상품 등록</title>
 </head>
 
 <body>
