--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -10,7 +10,7 @@
     <section class="section section-login flex-grow flex flex-col items-center justify-center">
 
         <div class="max-w-md w-full px-2 pt-4">
-            <h1 class="font-bold text-lg">
+            <h1 class="font-bold text-lg mb-[10px]">
                 <i class="fa-solid fa-arrow-right-to-bracket"></i>
                 로그인
             </h1>
@@ -21,24 +21,18 @@
                     </div>
                 </div>
                 <div class="form-control">
-                    <label class="label">
-                        <span class="label-text">아이디</span>
-                    </label>
                     <input autofocus class="input input-bordered" maxlength="50" name="username" id="username"
                            placeholder="아이디" type="text">
                 </div>
 
                 <div class="form-control">
-                    <label class="label">
-                        <span class="label-text">비밀번호</span>
-                    </label>
                     <input class="input input-bordered" maxlength="50" name="password" id="password" placeholder="비밀번호"
                            type="password">
                 </div>
 
                 <div class="grid grid-cols-2 mt-2 gap-2">
-                    <a class="btn btn-secondary btn-outline" th:href="@{/member/join}">가입하기</a>
-                    <input class="btn btn-primary" type="submit" value="로그인">
+                    <a class="btn btn-secondary btn-outline" th:href="@{/member/join}">회원가입</a>
+                    <input class="btn btn-primary btn-outline" type="submit" value="로그인">
                 </div>
 
                 <div class="flex justify-center">
@@ -62,9 +56,9 @@
                     </a>
                 </div>
             </div>
-            <div class="w-[10%]" id="login_google">
+            <div class="w-1/3" id="login_google">
                 <a class="flex justify-center" href="http://localhost:7070/oauth2/authorization/google">
-                    <img class="w-1/2 object-cover rounded-lg" th:src="@{/image/login_google.png}" alt="">
+                    <img class="w-[80px] h-[80px]" th:src="@{/image/login_google.png}" alt="">
                 </a>
             </div>
         </div>
